--- a/accordion/src/components/accordion/style.css
+++ b/accordion/src/components/accordion/style.css
@@ -1,8 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
 }
@@ -50,4 +49,30 @@ h1 {
 
 .accordion-item-wrap {
   border: 2px solid #000000;
+}
+
+.multi-selection-button {
+  margin: 0.5rem 0 2rem;
+  padding: 1rem;
+  color: #ffffff;
+  background-color: #000000;
+  font-weight: bold;
+  border-radius: 3px;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+}
+
+.multi-selection-checkbox {
+  width: 1rem;
+  height: 1rem;
+  accent-color: #000000;
+}
+
+.multi-selection-input-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
 }
