--- a/custom-scroll-indicator/src/components/styles.css
+++ b/custom-scroll-indicator/src/components/styles.css
@@ -52,14 +52,9 @@
   color: #ffffff;
 }
 
-.data-container {
-  text-align: center;
-  margin-top: 6.25rem;
-}
-
 .scroll-progress-tracking-container {
   width: 100%;
-  height: 0.7rem;
+  /* height: 0.7rem; */
   background: #003153;
 }
 
@@ -72,4 +67,44 @@
 
 .hide-progress-bar-border {
   border-right: none;
+}
+
+.circular-scroll-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.data-container {
+  text-align: center;
+  margin-top: 6.25rem;
+  flex-grow: 7;
+}
+
+.cross-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 6.25rem;
+  margin-right: 7rem;
+  border-radius: 50%;
+  background: #e0e0e0;
+  box-shadow: 20px 20px 33px #7b7b7b, -20px -20px 33px #ffffff;
+  width: 4rem;
+  height: 4rem;
+  position: fixed;
+}
+
+.cross-icon {
+  width: 2.3rem;
+  height: 2.3rem;
+  position: fixed;
+}
+
+.circular-progress-bar {
+  padding: none;
+  margin: auto;
+  width: 3px;
+  height: 3px;
+  background-color: #003153;
 }
