--- a/modal-popup/src/components/styles.css
+++ b/modal-popup/src/components/styles.css
@@ -1,5 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
 
+@keyframes rotate-loading-icon {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 @keyframes animate-modal-popup {
   from {
     bottom: -12.5rem;
@@ -26,7 +44,7 @@
   padding: 1rem;
   width: 32rem;
   height: 12rem;
-  border-radius: 3px;
+  border-radius: 0.188rem;
   max-width: 100vw;
   max-height: 100dvh;
   margin: auto;
@@ -46,18 +64,18 @@
   border: none;
   background-color: #005b8f;
   color: #ffffff;
-  border-radius: 3px;
+  border-radius: 0.188rem;
   padding: 1.25rem 2.15rem;
   font-size: 1.5rem;
   cursor: pointer;
 }
 
 .body {
-  padding: 2px 16px;
+  padding: 0.125rem 1rem;
 }
 
 .footer {
-  padding: 2px 16px;
+  padding: 0.125rem 1rem;
 }
 
 .error-message-title {
@@ -69,10 +87,12 @@
 
 .error-message-title > p {
   margin: 0;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 .error-icon {
-  color: rgb(230, 22, 22);
+  color: #e61616;
   font-size: 2rem;
 }
 
@@ -119,7 +139,7 @@
   color: #ffffff;
   padding: 0.75rem 1.15rem;
   background-color: #005b8f;
-  border-radius: 3px;
+  border-radius: 0.188rem;
   font-size: 1rem;
   cursor: pointer;
 }
@@ -128,31 +148,13 @@
   border: none;
   color: #005b8f;
   padding: 0.75rem 1.15rem;
-  border-radius: 3px;
+  border-radius: 0.188rem;
   font-size: 1rem;
   cursor: pointer;
 }
 
 .hide-modal-button {
   display: none;
-}
-
-@keyframes rotate-loading-icon {
-  from {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  to {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
 }
 
 .loading-icon {
@@ -164,5 +166,5 @@
   max-height: 100dvh;
   margin: auto;
   animation: rotate-loading-icon 0.8s linear infinite;
-  color: rgba(3, 102, 214, 0.3);
+  color: #0366d64d;
 }
