--- a/custom-hooks/src/components/styles.css
+++ b/custom-hooks/src/components/styles.css
@@ -39,6 +39,10 @@
   height: fit-content;
 }
 
+.products-container {
+  margin-bottom: 4rem;
+}
+
 .content {
   margin-bottom: 2rem;
 }
@@ -52,4 +56,8 @@
   font-size: 1rem;
   cursor: pointer;
   margin-bottom: 3rem;
+}
+
+.window-resize-container {
+  margin-bottom: 4rem;
 }
