--- a/custom-scroll-indicator/src/components/styles.css
+++ b/custom-scroll-indicator/src/components/styles.css
@@ -108,3 +108,102 @@
   height: 3px;
   background-color: #003153;
 }
+
+/*
+  Source -> https://github.com/DeeterCesler/circle-scroll/blob/main/src/style.css
+*/
+
+svg {
+  position: fixed;
+  z-index: 3;
+}
+
+.white-wrapper svg {
+  right: 50px;
+  z-index: 2 !important;
+}
+
+#circle-wrapper {
+  transform: rotate(-90deg);
+  right: 50px;
+  z-index: 3;
+}
+
+#circle-lol {
+  stroke: black;
+  z-index: 3;
+}
+
+.check-mark-wrapper {
+  position: fixed;
+  z-index: 999;
+  top: 2rem;
+}
+
+#check {
+  margin-top: 50px;
+  right: 80px;
+  z-index: 3;
+}
+
+#x-icon {
+  margin-top: 52px;
+  right: 102px;
+  z-index: 3;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.pop-in,
+.pop-in-initial {
+  animation: pop-in;
+  animation-duration: 0.5s;
+  position: relative;
+}
+
+.pop-in-initial {
+  animation-duration: 0.2s;
+}
+
+@keyframes pop-in {
+  0% {
+    opacity: 0;
+    z-index: 5;
+  }
+  100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+
+.fade-out {
+  animation: fade-out;
+  animation-duration: 1s;
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.grey-out {
+  animation: grey-out;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes grey-out {
+  0% {
+    /* stroke: #000; */
+  }
+  100% {
+    stroke: #000;
+  }
+}
