--- a/scroll-to-section/src/components/styles.css
+++ b/scroll-to-section/src/components/styles.css
@@ -71,3 +71,22 @@
   color: #003b46;
   cursor: pointer;
 }
+
+.scroll-button {
+  margin-block: 1rem;
+  cursor: pointer;
+  background-color: #282c34;
+  color: #ffffff;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 3px;
+  padding: 1rem 2rem;
+}
+
+.card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-block: 2rem;
+}
