--- a/food-recipe-app/src/index.css
+++ b/food-recipe-app/src/index.css
@@ -14,3 +14,102 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@keyframes rotate-loading-icon {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.loading-icon {
+  width: 5rem;
+  height: 5rem;
+  position: fixed;
+  inset: 0;
+  max-width: 100vw;
+  max-height: 100dvh;
+  margin: auto;
+  animation: rotate-loading-icon 0.8s linear infinite;
+  color: rgba(3, 102, 214, 0.3);
+}
+
+.error-message {
+  color: crimson;
+  font-weight: bold;
+  font-size: 1.5rem;
+  position: fixed;
+  inset: 0;
+  margin: auto;
+  width: fit-content;
+  height: fit-content;
+}
+
+.search-engine {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-input {
+  border: 0.125rem solid #6082b6;
+  border-right: none;
+  outline: none;
+  width: 18rem;
+  border-top-left-radius: 0.188rem;
+  border-bottom-left-radius: 0.188rem;
+  padding: 0.53rem;
+  font-size: 1rem;
+  background-color: #ffffff;
+}
+
+.search-button {
+  border: none;
+  border-radius: 0.188rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  background-color: #005b8f;
+  color: #ffffff;
+  font-size: 1.25rem;
+  outline: none;
+  cursor: pointer;
+  padding: 0.625rem 0.938rem;
+}
+
+.search-button:hover {
+  background-color: #6082b6;
+}
+
+.search-input-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+}
+
+.slash-key {
+  position: absolute;
+  right: 1rem;
+  padding: 0.1rem 0.35rem;
+  border-radius: 0.188rem;
+  text-align: center;
+  align-self: center;
+  font-size: 1.3rem;
+  background-color: #005b8f;
+  color: #ffffff;
+}
+
+.slash-key-hide {
+  display: none;
+}
